# CicodeParser

./: .envrc  example.ci  flake.nix  pyproject.toml
src/cicodeparser/: __init__.py  main.py  parsy.py
